# cpp-exercise

./: .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  License  README.md  build.sh  conanfile.txt  install-boost.sh  lint.sh
algo/: CMakeLists.txt  README.md
algo/misc/: generate_input.cpp
cppp/: CMakeLists.txt  README.md  build.sh
cppp/src/: template.cpp
cppp/src/10-generic-algo/: 1-2.cpp  20-21.cpp  3.cpp  6-7.cpp  bind.cpp  lambda.cpp  reverse-iterator.cpp  unique.cpp
cppp/src/11-associative-containers/: 12-13-pair.cpp  hash.cpp  map.cpp  multiset.cpp
cppp/src/12-dynamic-memory/: 10-11-13-shared-pointer.cpp  23-25.cpp  allocator.cpp  smart-pointer.cpp  unique-ptr.cpp
cppp/src/13-copy-control/: 18-19.cpp  28.cpp  copy-assign-destroy.cpp  move-constructor-assignment.cpp  reference-count.cpp  rvalue-reference.cpp  strvec.cpp
cppp/src/14-overloaded-operation-conversion/: call-signature.cpp  call.cpp  conversion-operator.cpp  library-function.cpp  output-operator.cpp  subscript-operator.cpp
cppp/src/15-oop/: basket.cpp  oop.cpp  pure-virtual.cpp  text-query-again.cpp
cppp/src/16-templates/: arg-pack.cpp  blob.cpp  function-template.cpp  member-template.cpp  move.cpp  specialization.cpp  template-arg-deduction.cpp
cppp/src/17-specialized-library-facilities/: bitset.cpp  random-number.cpp  regex.cpp  tuple.cpp
cppp/src/18-large-problem-tools/: exception.cpp  multiple-and-virtual-inheritance.cpp  namespace.cpp
cppp/src/19-specialized-tools-and-techniques/: enumerations.cpp  memory-allocation.cpp  non-portable-features.cpp  pointer-to-class-member.cpp  run-time-type-identification.cpp  union.cpp
cppp/src/2/: 27-legal-const-init.cpp  28-legal-const-init-cont.cpp  30-31-top-low-level-const.cpp  35-determine-auto-types.cpp  36-37-decltype.cpp  sale.h  sale_item_usage.cpp
cppp/src/3/: 12-13-vector-initialization.cpp  17-capitalize.cpp  18-19-20-vector-basic-ops.cpp  23-intro-arrow-operator.cpp  27-28-array-initialize.cpp  32-33-access-array.cpp  34-35-36-array-vector-comparison.cpp  37-38-39.cpp  43-print-array-of-array-without-auto.cpp  679B.cpp  array-pointer.cpp  c-style-strings-not-recommended.cpp  cin-print-fixme.cpp  iterator-binary-search.cpp
cppp/src/4-expression/: 21-23-conditional-operator.cpp  28-29-32-sizeof-and-loop.cpp  36-first-cast.cpp  9-11-12.cpp  bitwise.cpp  which-one-first.cpp
cppp/src/5-statement/: 17-prefix-vector.cpp  exception.cpp
cppp/src/6-function/: 10-swap-using-pointer.cpp  17-18-19.cpp  21-22-24.cpp  28.cpp  3-7-factorial-and-local-static.cpp  32-33.cpp  36-37-declaration-return-type.cpp  39-overload.cpp  assert-and-local-static.cpp  default-args.cpp  func-pointer.cpp  function-return-as-lvalue.cpp  test_test.cpp
cppp/src/7-class/: 31.cpp  35.cpp  36.cpp  43-44-45.cpp  additional-class.cpp  first-class.cpp  static-member.cpp  static-member.h  struct.cpp
cppp/src/8-io/: filestream.cpp
cppp/src/9-sequential-container/: 27-28-29.cpp  43-44.cpp  45-46-50.cpp  51.cpp  adaptor.cpp  container-exercise.cpp  container-member.cpp  container-misc.cpp  erase.cpp
effective-modern-cpp/: CMakeLists.txt
effective-modern-cpp/src/: understand-move-forward.cpp
effective-modern-cpp/src/1-template-type-deduction/: deduct.cpp
effective-modern-cpp/src/10-prefer-scoped-enums/: scoped-enums.cpp
effective-modern-cpp/src/11-prefer-deleted-than-undefined/: prefer-deleted.cpp
effective-modern-cpp/src/12-declare-override/: override.cpp
effective-modern-cpp/src/13-prefer-const-iterator/: prefer-const-iter.cpp
effective-modern-cpp/src/14-declare-noexcept/: noexcept.cpp
effective-modern-cpp/src/15-constexpr/: constexpr.cpp
effective-modern-cpp/src/16-const-member-thread-safe/: const-thread-safe.cpp
effective-modern-cpp/src/17-special-member-function-gen/: special-member-func-gen.cpp
effective-modern-cpp/src/18-unique-ptr/: unique-ptr.cpp
effective-modern-cpp/src/19-shared-ptr/: shared-ptr.cpp
effective-modern-cpp/src/2-auto-type-deduction/: auto-deduct.cpp
effective-modern-cpp/src/20-weakptr/: weakptr-for-potential-dangle.cpp
effective-modern-cpp/src/21-prefer-make-unique/: prefer-make-unique-make-shared.cpp
effective-modern-cpp/src/22-pimpl/: pointer-to-impl.cpp
effective-modern-cpp/src/24-distinguish-universal-rval-ref/: distinguish-universal-rval-ref.cpp
effective-modern-cpp/src/25-move-rval-forward-uniref/: move-rval-forward-uniref.cpp
effective-modern-cpp/src/26-avoid-overload-uni-ref/: avoid-overload-universal-ref.cpp
effective-modern-cpp/src/27-alternative-to-overload-uniref/: alternative-to-overload-uniref.cpp
effective-modern-cpp/src/28-ref-collapse/: reference-collapsing.cpp
effective-modern-cpp/src/29-avoid-move/: assume-move-notexist-expensive.cpp
effective-modern-cpp/src/3-decltype/: decltype.cpp
effective-modern-cpp/src/30-perfect-forward-failure/: perfect-forward-failure.cpp
effective-modern-cpp/src/31-avoid-default-capture/: avoid-default-capture.cpp
effective-modern-cpp/src/32-init-capture/: use-init-capture-to-move.cpp
effective-modern-cpp/src/33-decltype-auto-forward/: decltype-auto-refref-forward.cpp
effective-modern-cpp/src/34-prefer-lambda-to-bind/: prefer-lambda-to-bind.cpp
effective-modern-cpp/src/35-prefer-task-to-thread/: prefer-task-based-to-thread.cpp
effective-modern-cpp/src/36-launch-async/: launch-async.cpp
effective-modern-cpp/src/37-make-thread-unjoinable/: make-thread-unjoinable.cpp
effective-modern-cpp/src/38-varing-thread-handle-destructor/: varing-destructor.cpp
effective-modern-cpp/src/39-void-future-communication/: void-future-comm.cpp
effective-modern-cpp/src/4-view-deduced-type/: view-deduced.cpp
effective-modern-cpp/src/40-atomic-con/: atomic-for-concurrency-volatile-for-specifal-mem.cpp
effective-modern-cpp/src/41-pass-by-value-when-cheap/: pass-by-value-when-cheap.cpp
effective-modern-cpp/src/42-emplace-to-insert/: consider-emplace.cpp
euler/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt
(+163 files in other folders)
